--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,27 @@
 body {
-    background-color: #b3b3b3;
+    background-color: green;
+}
+
+p, h1, h2, a{
+    color: yellowgreen;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+  position: relative;
+  background-color: #333;
+  overflow: hidden;
+  display: none;
+}
+
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display:none;
 }
