--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,21 @@
 body {
-    background-color: green;
+    background-color: #2A1E36;
 }
 
-p, h1, h2, a{
-    color: yellowgreen;
+p, h1, h2, a, ul{
+    color: white;
 }
 
-/* Add a black background color to the top navigation */
+
 .topnav {
-  position: relative;
-  background-color: #333;
-  overflow: hidden;
-  display: none;
+    width: 500px; 
+    margin: 0 auto;
+    text-align: center;
 }
 
-
-/* Style the links inside the navigation bar */
 .topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  display:none;
+    color: white; 
+    padding: 14px 20px;
+    text-decoration: none;
+    display: inline-block;
 }
