--- a/lab2/styles.css
+++ b/lab2/styles.css
@@ -2,10 +2,21 @@ body {
     background-color: #2A1E36;
     margin: 0;
     font-family: Arial, sans-serif;
+
 }
 
 p, h1, h2, h3, a, ul {
     color: white;
+}
+
+h1{
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+main{
+    margin: 60px;
 }
 
 
@@ -67,9 +78,9 @@ footer {
     padding: 20px 0;
     width: 100%;
     box-shadow: 0 -2px 5px rgba(0,0,0,0.2);
-    position: fixed;
     bottom: 0;
     left: 0;
-    height: 60px;
+    height: 80px;
     box-sizing: border-box;
+    margin-top:30px;
 }
